--- a/TojoMobile/projects/cell/TJProjectListCell.xib
+++ b/TojoMobile/projects/cell/TJProjectListCell.xib
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TJProjectListCell" id="KGk-i7-Jjw" customClass="TJProjectListCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TJProjectListCell" rowHeight="130" id="KGk-i7-Jjw" customClass="TJProjectListCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -16,7 +15,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GSm-TE-9pv">
-                        <rect key="frame" x="20" y="10" width="110" height="110"/>
+                        <rect key="frame" x="20" y="10" width="110" height="109"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="110" id="GKU-ra-01z"/>
                         </constraints>
@@ -61,31 +60,19 @@
                         <rect key="frame" x="199" y="43" width="80" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="GZC-Qr-l1k"/>
-                            <constraint firstAttribute="height" constant="21" id="kr5-rl-x59"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.11764705882352941" green="0.76470588235294112" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="kr5-rl-x59"/>
-                            </mask>
-                        </variation>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bp5-YM-PZ1">
                         <rect key="frame" x="199" y="63" width="30" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="EdE-7U-My3"/>
-                            <constraint firstAttribute="height" constant="21" id="kLf-2k-QdB"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.1176470588" green="0.76470588240000004" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="kLf-2k-QdB"/>
-                            </mask>
-                        </variation>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="设计 互联网" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K1o-5l-BJF">
                         <rect key="frame" x="139" y="83" width="60" height="12"/>
@@ -97,8 +84,8 @@
                         <color key="textColor" red="0.61960784313725492" green="0.61960784313725492" blue="0.62352941176470589" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="同济大学 纪鹏" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPB-Ud-f4B">
-                        <rect key="frame" x="196" y="98" width="76" height="14"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="同济大学 纪鹏" textAlignment="right" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="76" translatesAutoresizingMaskIntoConstraints="NO" id="LPB-Ud-f4B">
+                        <rect key="frame" x="196" y="97" width="76" height="14"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="76" id="D6T-iT-epZ"/>
                             <constraint firstAttribute="height" constant="14" id="DGf-NX-bR8"/>
@@ -117,7 +104,6 @@
                     <constraint firstItem="Bp5-YM-PZ1" firstAttribute="leading" secondItem="3xS-7u-GMd" secondAttribute="trailing" id="F5N-n4-myv"/>
                     <constraint firstItem="wrR-eg-v2X" firstAttribute="leading" secondItem="P0o-uj-h9R" secondAttribute="trailing" id="GEw-U6-dTx"/>
                     <constraint firstAttribute="bottom" secondItem="LPB-Ud-f4B" secondAttribute="bottom" constant="18" id="HKL-Ng-YFh"/>
-                    <constraint firstItem="7bz-OW-i5G" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="14" id="IqS-ES-lR7"/>
                     <constraint firstItem="K1o-5l-BJF" firstAttribute="top" secondItem="3xS-7u-GMd" secondAttribute="bottom" constant="5" id="IrH-rE-wec"/>
                     <constraint firstItem="l6D-dY-ca0" firstAttribute="leading" secondItem="LPB-Ud-f4B" secondAttribute="trailing" constant="8" id="JZt-0W-Ygn"/>
                     <constraint firstAttribute="bottom" secondItem="l6D-dY-ca0" secondAttribute="bottom" constant="11" id="NrA-Gh-Uig"/>
@@ -133,14 +119,9 @@
                     <constraint firstItem="7bz-OW-i5G" firstAttribute="leading" secondItem="GSm-TE-9pv" secondAttribute="trailing" constant="9" id="raC-qG-Rtk"/>
                     <constraint firstAttribute="trailing" secondItem="7bz-OW-i5G" secondAttribute="trailing" constant="15" id="rgk-d3-Gs1"/>
                 </constraints>
-                <variation key="default">
-                    <mask key="constraints">
-                        <exclude reference="IqS-ES-lR7"/>
-                    </mask>
-                </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="constrainWidthFounderNameLabel" destination="D6T-iT-epZ" id="H05-qD-wxc"/>
+                <outlet property="constrainFounderNameLabelWidth" destination="D6T-iT-epZ" id="0zA-5e-v2t"/>
                 <outlet property="founderImageView" destination="l6D-dY-ca0" id="EJd-QR-w1D"/>
                 <outlet property="founderNameAndUniLabel" destination="LPB-Ud-f4B" id="c00-ww-jQF"/>
                 <outlet property="projectEndDateLabel" destination="wrR-eg-v2X" id="JIU-Oo-BpQ"/>
