--- a/TojoMobile/user/cell/TJUserBasicInfoCell.xib
+++ b/TojoMobile/user/cell/TJUserBasicInfoCell.xib
@@ -1,62 +1,82 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TJUserBasicInfoCell" rowHeight="80" id="KGk-i7-Jjw" customClass="TJUserBasicInfoCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="TJUserBasicInfoCell" rowHeight="200" id="24N-P7-giW" customClass="TJUserBasicInfoCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="170"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="24N-P7-giW" id="C8l-gt-IQ3">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aK6-aq-a2s">
-                        <rect key="frame" x="10" y="10" width="60" height="60"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6PN-Qt-d71">
+                        <rect key="frame" x="130" y="15" width="60" height="60"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="60" id="Drj-AQ-Xbs"/>
-                            <constraint firstAttribute="width" constant="60" id="shH-PT-s9u"/>
+                            <constraint firstAttribute="width" constant="60" id="Q5Q-3c-u3g"/>
+                            <constraint firstAttribute="height" constant="60" id="TI6-Bg-zCi"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="丹青" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ayR-h7-Dkj">
-                        <rect key="frame" x="78" y="16" width="97" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="丹青" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tfT-U4-lEM">
+                        <rect key="frame" x="0.0" y="85" width="320" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="GRO-bn-vQA"/>
-                            <constraint firstAttribute="width" constant="97" id="ORq-aD-dVn"/>
+                            <constraint firstAttribute="height" constant="21" id="crd-tB-zUU"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="同济大学 嘉定" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nBf-Qt-Psb">
-                        <rect key="frame" x="78" y="45" width="120" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="同济大学 嘉定" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bob-De-eaS">
+                        <rect key="frame" x="0.0" y="110" width="320" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="7g6-yx-wIH"/>
-                            <constraint firstAttribute="width" constant="120" id="gN0-Sv-Vbe"/>
+                            <constraint firstAttribute="height" constant="21" id="j7y-fv-Lny"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XEJ-hv-qHZ">
+                        <rect key="frame" x="138" y="130" width="45" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="45" id="Z7M-64-nlt"/>
+                            <constraint firstAttribute="height" constant="30" id="mVo-97-aml"/>
+                        </constraints>
+                        <state key="normal" title="发信息">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
                 </subviews>
+                <color key="backgroundColor" red="0.1176470588" green="0.76470588240000004" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="ayR-h7-Dkj" firstAttribute="leading" secondItem="aK6-aq-a2s" secondAttribute="trailing" constant="8" id="3D9-Rh-NBi"/>
-                    <constraint firstItem="aK6-aq-a2s" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="FGr-va-eBL"/>
-                    <constraint firstItem="nBf-Qt-Psb" firstAttribute="top" secondItem="ayR-h7-Dkj" secondAttribute="bottom" constant="8" id="I9o-j8-VyV"/>
-                    <constraint firstItem="ayR-h7-Dkj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="L2M-og-Dzi"/>
-                    <constraint firstItem="nBf-Qt-Psb" firstAttribute="leading" secondItem="aK6-aq-a2s" secondAttribute="trailing" constant="8" id="Mxq-A2-rXc"/>
-                    <constraint firstItem="aK6-aq-a2s" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="kv3-9h-sSq"/>
+                    <constraint firstItem="XEJ-hv-qHZ" firstAttribute="top" secondItem="tfT-U4-lEM" secondAttribute="bottom" constant="24" id="8kT-or-i73"/>
+                    <constraint firstAttribute="trailing" secondItem="tfT-U4-lEM" secondAttribute="trailing" id="IZh-ya-BdA"/>
+                    <constraint firstItem="6PN-Qt-d71" firstAttribute="top" secondItem="C8l-gt-IQ3" secondAttribute="top" constant="15" id="Ie7-N4-LZ3"/>
+                    <constraint firstItem="tfT-U4-lEM" firstAttribute="top" secondItem="6PN-Qt-d71" secondAttribute="bottom" constant="10" id="PvC-k0-lN8"/>
+                    <constraint firstItem="tfT-U4-lEM" firstAttribute="leading" secondItem="C8l-gt-IQ3" secondAttribute="leading" id="SfE-xE-txH"/>
+                    <constraint firstAttribute="centerX" secondItem="XEJ-hv-qHZ" secondAttribute="centerX" id="Vnh-sG-X18"/>
+                    <constraint firstAttribute="trailing" secondItem="Bob-De-eaS" secondAttribute="trailing" id="r5q-wh-Eys"/>
+                    <constraint firstItem="Bob-De-eaS" firstAttribute="top" secondItem="tfT-U4-lEM" secondAttribute="bottom" constant="4" id="shq-1r-bOU"/>
+                    <constraint firstItem="Bob-De-eaS" firstAttribute="leading" secondItem="C8l-gt-IQ3" secondAttribute="leading" id="uB3-lR-UtG"/>
+                    <constraint firstAttribute="centerX" secondItem="6PN-Qt-d71" secondAttribute="centerX" id="uaz-Ox-pEw"/>
                 </constraints>
+                <variation key="heightClass=regular-widthClass=compact">
+                    <mask key="subviews">
+                        <include reference="6PN-Qt-d71"/>
+                        <include reference="tfT-U4-lEM"/>
+                        <include reference="Bob-De-eaS"/>
+                        <include reference="XEJ-hv-qHZ"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="userImageView" destination="aK6-aq-a2s" id="AI3-JZ-9gp"/>
-                <outlet property="userNameLabel" destination="ayR-h7-Dkj" id="bG5-rh-T86"/>
-                <outlet property="userSchoolLabel" destination="nBf-Qt-Psb" id="Obk-ZV-Pr7"/>
+                <outlet property="userImageView" destination="6PN-Qt-d71" id="4Yb-Qe-2Ni"/>
+                <outlet property="userNameLabel" destination="tfT-U4-lEM" id="Dyb-X9-eBF"/>
+                <outlet property="userSchoolLabel" destination="Bob-De-eaS" id="Og3-qg-qT4"/>
             </connections>
-            <point key="canvasLocation" x="304" y="226"/>
+            <point key="canvasLocation" x="304" y="433"/>
         </tableViewCell>
     </objects>
 </document>
